--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -39,5 +39,6 @@ h2::after {
 .footer-content {
     flex-direction: row;
     justify-content: space-between;
-    padding: 10px 20px;
+    padding: $gutter;
+    margin: $gutter;
 }
