--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -32,7 +32,7 @@ body {
   #titleBar h1 {
     font-weight: 300;
     color: white;
-    margin: 16px;
+    margin: $gutter;
   }
 
 
@@ -190,30 +190,51 @@ main {
         color: black;
         
     }
-
-    h2 {
-        text-align: center; 
-        font-size: 32px; 
-        font-weight: $lightWeight;
-        margin-bottom: 20px;
-        position: relative;
-        display: block; 
-        width: 100%; 
-    } 
-
     p {
-        text-align: center;
+        text-align: left;
         font-weight: $lightWeight;
         padding: $gutter;
+        margin: $gutter;
+        line-height: 1.5;
+    }
+
+    h2 {
+        text-align: left; 
+        font-size: 32px;
+        font-weight: $lightWeight;
+        margin-bottom: 20px;
+        margin-left: $gutter; 
+        padding: $gutter;
+        position: relative;
+        display: block;
+        width: calc(100% - 16px);
     }
     
     h2::after {
-        content: ""; 
+        content: "";
         display: block;
-        width: 80px; 
+        width: 80px;
+        height: 3px;
+        background-color: black;
+        margin: 8px 0 0; 
+    }
+    
+
+    h3 {
+        font-weight: $lightWeight;
+        display: inline-block; 
+        position: relative;
+        padding-bottom: 5px; 
+        text-align: center;
+    }
+    
+    h3::after {
+        content: "";
+        display: block;
+        width: 100%; 
         height: 3px; 
         background-color: black; 
-        margin: 8px auto 0; 
+        margin-top: 5px; 
     }
 } //main
 
@@ -240,7 +261,7 @@ main {
     flex-direction: column; 
     align-items: center;
     text-align: center;
-    padding: 10px;
+    padding: $gutter;
     gap: 10px; 
 }
 
